--- a/tools/ScenarioEditor/ScenarioEditor/View/Popup/EditLines.xaml
+++ b/tools/ScenarioEditor/ScenarioEditor/View/Popup/EditLines.xaml
@@ -14,23 +14,81 @@
 
     <Window.Resources>
         <local:CharacterConverter x:Key="CharacterConverter"/>
+        <local:EFaceConverter x:Key="EFaceConverter"/>
+        <local:ECostumeConverter x:Key="ECostumeConverter"/>
+        <local:EPositionConverter x:Key="EPositionConverter"/>
+        <local:ELinesEffectConverter x:Key="ELinesEffectConverter"/>
+        <Style TargetType="{x:Type TextBlock}">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
     </Window.Resources>
     
     <StackPanel Margin="10">
         <StackPanel>
-            <ComboBox ItemsSource="{Binding Path=CharacterList}" SelectedItem="{Binding Path=SelectedItem}" HorizontalAlignment="Left">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Converter={StaticResource CharacterConverter}}"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <TextBlock Text="{Binding Path=GuideHowToInputLines}" Foreground="Gray" VerticalAlignment="Center" Margin="0,10,0,5"/>
+            
+            <StackPanel Orientation="Horizontal">
+                <ComboBox ItemsSource="{Binding Path=CharacterList}" SelectedItem="{Binding Path=SelectedItem}" HorizontalAlignment="Left">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Converter={StaticResource CharacterConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <CheckBox IsChecked="{Binding Path=IsAnonymous}" Content="IsAnonymous"
+                          Margin="10,0" VerticalAlignment="Center"/>
+            </StackPanel>
+            
+            <StackPanel Orientation="Horizontal" Margin="0,5">
+                <TextBlock Text="{x:Static p:Resources.FaceExpression}"/>
+                <ComboBox ItemsSource="{Binding Path=FaceList}" SelectedItem="{Binding Path=Face}" HorizontalAlignment="Left"
+                          Margin="5,0,10,0">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Converter={StaticResource EFaceConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <TextBlock Text="{x:Static p:Resources.Costume}"/>
+                <ComboBox ItemsSource="{Binding Path=CostumeList}" SelectedItem="{Binding Path=Costume}" HorizontalAlignment="Left"
+                          Margin="5,0,10,0">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Converter={StaticResource ECostumeConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <TextBlock Text="{x:Static p:Resources.CharacterPosition}"/>
+                <ComboBox ItemsSource="{Binding Path=PosList}" SelectedItem="{Binding Path=Position}" HorizontalAlignment="Left"
+                          Margin="5,0,0,0">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Converter={StaticResource EPositionConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </StackPanel>
+            
+            <TextBlock Text="{Binding Path=GuideHowToInputLines}" Foreground="Gray" VerticalAlignment="Center" 
+                       Margin="0,5,0,0"/>
             <TextBox Padding="2" 
                      Text="{Binding Path=Lines}" FontSize="14" 
                      TextWrapping="Wrap" AcceptsReturn="True" 
                      MinLines="4"
-                     TextChanged="TextBox_TextChanged"/>
+                     TextChanged="TextBox_TextChanged"
+                     Margin="0,5"/>
+            
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{x:Static p:Resources.LinesEffect}"/>
+                <ComboBox ItemsSource="{Binding Path=LinesEffectList}" SelectedItem="{Binding Path=LinesEffect}" HorizontalAlignment="Left"
+                          Margin="5,0,0,0">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Converter={StaticResource ELinesEffectConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </StackPanel>
+            
         </StackPanel>
         <DockPanel HorizontalAlignment="Right" Margin="0,10,0,0">
             <DockPanel.Resources>
