--- a/tools/ScenarioEditor/ScenarioEditor/View/Popup/EditBackground.xaml
+++ b/tools/ScenarioEditor/ScenarioEditor/View/Popup/EditBackground.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ScenarioEditor.View.Popup.EditFilter"
+﻿<Window x:Class="ScenarioEditor.View.Popup.EditBackground"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,28 +6,27 @@
         xmlns:local="clr-namespace:ScenarioEditor.View.Popup"
         xmlns:p="clr-namespace:ScenarioEditor.Properties"
         mc:Ignorable="d"
-        Title="{x:Static p:Resources.EditFilter}" 
+        Title="{x:Static p:Resources.EditBackground}" 
         SizeToContent="Height"
         Height="Auto" Width="280"
         WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize">
 
     <Window.Resources>
-        <local:EFilterConverter x:Key="EFilterConverter"/>
+        <local:ArtsResourceConverter x:Key="ArtsResourceConverter"/>
     </Window.Resources>
-    
+
     <StackPanel Margin="10">
-        
-        <ComboBox ItemsSource="{Binding Path=FilterList}" SelectedItem="{Binding Path=Filter}" HorizontalAlignment="Left"
-                  Margin="0,0,0,5">
+
+        <ComboBox ItemsSource="{Binding Path=BackgroundList}" SelectedItem="{Binding Path=SelectedItem}" HorizontalAlignment="Left">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Converter={StaticResource EFilterConverter}}"/>
+                    <TextBlock Text="{Binding Converter={StaticResource ArtsResourceConverter}}"/>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <DockPanel HorizontalAlignment="Right">
+        <DockPanel HorizontalAlignment="Right" Margin="0,10,0,0">
             <DockPanel.Resources>
                 <Style TargetType="{x:Type Button}">
                     <Setter Property="Padding" Value="15,5"/>
@@ -37,7 +36,7 @@
             <!-- IsCancel : react to press ESC key -->
             <Button Content="{x:Static p:Resources.Cancel}" IsCancel="True"/>
         </DockPanel>
-
-    </StackPanel>    
+        
+    </StackPanel>
     
 </Window>
