--- a/tools/ScenarioEditor/ScenarioEditor/View/Popup/EditFeeling.xaml
+++ b/tools/ScenarioEditor/ScenarioEditor/View/Popup/EditFeeling.xaml
@@ -13,17 +13,18 @@
         ResizeMode="NoResize">
 
     <Window.Resources>
-        <local:CharacterConverter x:Key="CharacterConverter"/>
+        <local:TargetConverter x:Key="TargetConverter"/>
         <local:EOperationConverter x:Key="EOperationConverter"/>
     </Window.Resources>
 
     <StackPanel Margin="10">
         
         <StackPanel Orientation="Horizontal" Margin="0,10">
-            <ComboBox ItemsSource="{Binding Path=CharacterList}" SelectedItem="{Binding Path=Character}" HorizontalAlignment="Left">
+            <ComboBox ItemsSource="{Binding Path=TargetList}" SelectedItem="{Binding Path=SelectedItem}" HorizontalAlignment="Left"
+                      Margin="0,0,10,0">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding Converter={StaticResource CharacterConverter}}"/>
+                        <TextBlock Text="{Binding Converter={StaticResource TargetConverter}}"/>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>            
